# nge_2_re

./: .editorconfig  .gitignore  .gitmodules  .pylintrc  1.txt  2.py  AGENTS.md  CROWDIN_CONTRIBUTING.md  Dockerfile  Makefile  README.md  mb.txt  output.json  output2.json  pyproject.toml  run_gui.py  setup.cfg
.github/workflows/: astro.yml  build-gui.yml  build.yml  cmake-build.yml  mirror.yml
app/: app.py  db.py
app/cli/: main.py
app/dao/: entry.py  evs.py  hgar.py  hgar_file.py  sentence.py  translation.py
app/database/: db.py
app/elf_patch/: README.md  patcher.py
app/entity/: entry.py  evs.py  evs_entry.py  hgar.py  hgar_file.py  hgpt.py  raw.py  sentence.py  translation.py
app/gui/: README.md  __init__.py  main.py  workflows.py
app/utils/: evs.py  map.py
assets/: README
astro/: astro.config.mjs  package-lock.json  package.json
astro/src/: style.scss
cpp/tests/: test_parser.cpp
crowdin/: eboot_english.json  eboot_for_crowdin.json  extract.py
docs/: CROWDIN_CONTRIBUTING.md  FRAME_RATE.md  HGPT_IMAGE_WORKFLOW.md  STAFF.md  TECHNICAL_REPORT.md  UMD.md  USAGE.md  metadata.md  sub_890F2C4_off_8A4B45C.md
dyn_patch/: README.md  allpsp.h  clean_ida_header.py  generate_ida_headers.sh  logo.c  logo_decom.c
elf_patch/: README.md  patch.ipynb  patch.py
encoding/: encode_new_table.py  generate_new_table.py  new.json  new_table_bin.txt  output.txt  patch_eboot_table.py  path_table_with_kv.py  write_tbl_to_eboot.py
evs/: evs_say_params.json  filter_evs.py
evs/original/: tev0101#id39.evs.EVS.json  tev0102#id7.evs.EVS.json  tev0201#id7.evs.EVS.json  tev0202#id7.evs.EVS.json  tev0203#id7.evs.EVS.json  (+158 more)
min-manual/: manual.typ
mt/: main.py
paratranz/: bot.py  download.py
parser/: Cargo.toml
plugin/: CMakeLists.txt  Makefile  Makefile.loader  Makefile.patcher  README.md  gb2312_to_custom_map.txt  gentable.py  transform.c
plugin/assets/: ui_atlas_chars.txt
plugin/include/: atlas_data.h  font.h  fs.h  hook.h  image_display.h  log.h  logger.h  patcher.h  psputil.h  scefttt.h  sprintf.h  strcpy.h  transform.h  ui_atlas.h  unifont.h  utils.h
plugin/plugin/include/: patcher.h
plugin/plugin/scripts/: Makefile  gentable.py
plugin/plugin/src/: patcher.c  transform.c
plugin/scripts/: Makefile  bin2c.py  gen_ttf_atlas.py  gentable.py  unifont.py
plugin/src/: fs.c  main.c  patcher.c  psputil.c  sceLibFont.S  scefttt.c  sjis.c  transform.c
plugin/src/loader/: Makefile  font.c  image_display.c  loader.c  ui_draw.c  unifont.c
plugin/src/patcher/: main.cc  patcher.c  patcher.cc  transform.c
plugin/src/utils/: log.c  logger.cc  sprintf.c  strcpy.c  utils.c
scripts/: append_tev_context.py  batch_ocr_vlm.py  check.py  gen_metadata.py  memtalk_rewrite.c  memtalk_viewer.html  sfo.py  update_context_paratranz.py
tests/: profile_export_bind.py  profile_export_hgar.py  profile_import_hgar.py  test_models.py
tools/: common.py  evs.py  hgar.py
zh_cn/: btimtext.json  info.json  new_table_bin.txt  tuto.json
(+144 files in other folders)
