[metadata]
name = nge_2_re
version = 0.1.0
description = 《新世纪福音战士 2 ：被创造的世界》汉化计划
author = Your Name
author_email = your.email@example.com
license = GPLv3
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8
install_requires =
    sqlalchemy
    pandas
    numpy
    requests
    tqdm

[options.extras_require]
dev =
    pytest
    pytest-cov
    black
    isort
    mypy
    pylint
    flake8

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = --verbose --cov=src

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist,.venv

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True

[isort]
profile = black
multi_line_output = 3 